fix map iOS layout bug

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -12,7 +12,7 @@
   }
 
   body {
-    min-width: 480px;
+    min-width: 100vw;
     min-height: 100vh;
 
     opacity: 1;
